--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             <a href="#book-technician" class="book-btn">📧 Book A Technician</a> <!-- Updated to use an anchor link -->
         </div>
     </header>
+
+    <section class="call-to-action">
+        <div class="call-to-action-content">
+            <h2>Book A Technician Now!</h2>
+            <p>Call one of our technicians for a quick quotation or call out</p>
+        </div>
+        <div class="cta-buttons">
+            <a href="tel:+27742155824" class="call-btn">📞 0742155824</a>
+            <a href="#book-technician" class="book-btn">📧 Book A Technician</a> <!-- Updated to use an anchor link -->
+        </div>
+    </section>
     <!-- Hero Section -->
     <section class="hero">
         <h1>APPLIANCE REPAIR SPECIALIST IN NORTH WEST</h1>
