--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="logo.jpeg" alt="Appliance Care & Electrical Logo">
         </div>
-        <h1>ORIGIN APPLIANCE REPAIR</h1>
+        <h1>ORIGIN FRIDGE REPAIR</h1>
         <h2>THE MOBILE WORKSHOP UNIT</h2>
         <div class="cta-buttons">
             <a href="tel:+27742155824" class="call-btn">📞 0742155824</a>
