--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>APPLIANCE REPAIR SPECIALIST IN NORTH WEST</h1>
         <div class="services">
             <div class="service-item">
-                <img src="applianceHome.jpeg" alt="Home Appliances">
+                <img src="fridge.jpeg" alt="Home Appliances">
                 <h3>HOME APPLIANCES</h3>
                 <p>Fridges, Washing Machines, Air Cons, Stoves, Ovens, and more.</p>
             </div>
